--- a/app/src/main/res/layout/fragment_view_product.xml
+++ b/app/src/main/res/layout/fragment_view_product.xml
@@ -218,13 +218,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                         <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recylerviewComments"
+                            android:id="@+id/recyclerViewComments"
+                            tools:listitem="@layout/adapter_reviews"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/textNoComment"
                             android:gravity="center"
                             android:textSize="16sp"
+                            android:visibility="gone"
                             android:layout_width="match_parent"
                             android:layout_height="100dp"
                             android:text="No Comments Yet"/>
