--- a/app/src/main/res/layout/fragment_view_transaction.xml
+++ b/app/src/main/res/layout/fragment_view_transaction.xml
@@ -123,31 +123,70 @@
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        android:layout_marginVertical="5dp"
-        android:id="@+id/cardShipping"
-        style="@style/Widget.Material3.CardView.Filled"
-        app:cardBackgroundColor="@color/white"
-        >
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:text="Driver Info"
-            android:textStyle="bold"
-            android:textColor="@color/black"/>
+            app:cardCornerRadius="10dp"
+            android:layout_marginVertical="5dp"
+            android:id="@+id/cardShipping"
+            style="@style/Widget.Material3.CardView.Filled"
+            app:cardBackgroundColor="@color/white"
+            >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:text="@string/driver_info"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-    </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:id="@+id/imageDriverProfile"
+                        android:src="@drawable/profile"
+                        android:layout_margin="5dp"
+                        android:scaleType="centerCrop"
+                        app:shapeAppearance="@style/CornerCut"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:orientation="vertical">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:id="@+id/textDriverName"
+                            android:textStyle="bold"
+                            android:text=""
+                            android:maxLines="1"
+                            android:ellipsize="end"/>
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:id="@+id/textDriverPhone"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_medium"
+                            android:text=""
+                            android:textColor="#C1BFBF" />
+
+
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
